--- a/_includes/sections/projects.html
+++ b/_includes/sections/projects.html
@@ -2,13 +2,13 @@
     <div class="row m-b-lg">
         <div class="col-lg-12 text-center">
             <div class="navy-line"></div>
-            <h1><span data-i18n="projects.my_projects">My Projects</span></h1>
+            <h1><span data-i18n="projects.minhoipark">My Projects</span></h1>
         </div>
     </div>
   <div class="row">
     <div class="col-lg-12 text-center">
-      <p><a href="https://github.com/mrastgoo"><i class="fa fa-github fa-3x"></i></a></p>
-      <p><a href="https://github.com/mrastgoo">GitHub</i></a></p>
+      <p><a href="https://github.com/minhoipark"><i class="fa fa-github fa-3x"></i></a></p>
+      <p><a href="https://github.com/minhoipark">GitHub</i></a></p>
     </div>
   </div>
     <div class="row">
