--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -16,16 +16,27 @@
  <div class="row">
       <h1>2024</h1>
       <ul style="list-style-type: none">
+      <h2>Peer Reviewed</h2>
+      <ul style="list-style-type: none">
 
 	<li class="entry">
-	  <h2><strong>Pruning AdaBoost for Continuous Sensors Mining Applications</strong></h2>
+	  <h2><strong>Dirichlet Stochastic Weights Averaging for Graph Neural Networks</strong></h2>
 	  <em>Minhoi Park</em>, Rakwoo Chang, and Kyungwoo Song
 	  Applied Intelligence 2024.(SCIE, JCR 2023 IF=3.4)
-	  #<a href="https://docs.google.com/file/d/0B-DJ98-Q1GtpN0pFajR1TVBhZGc/edit?usp=sharing">[PDF]</a><a href="https://docs.google.com/file/d/0B-DJ98-Q1GtpUWhTT1M0Y2Fod0k/edit?usp=sharing">[poster]</a>
 	</li>
 
       </ul>
 
+	<li class="entry">
+	  <h2><strong>Language Model-guided Student Performance Prediction with Multimodal Auxiliary Information</strong></h2>
+	  Changdae Oh, <em>Minhoi Park</em>, Sungjun Lim, and Kyungwoo Song
+	  Expert Systems With Applications 2024. (SCIE, JCR 2023 IF=7.8)
+	 </li>
+
+      </ul>
+
+     
+    </div>	 
      
     </div>
   </div>
