--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -25,7 +25,7 @@
 	  Applied Intelligence 2024.(SCIE, JCR 2023 IF=3.4)
 
           <h2><strong>Exploring the Potential of Foundation Models as Reliable AI Contact Centers</strong></h2>
-	  Hoyyoon Byun, <em>Minhoi Park</em>, Seolah Kim, Eunbi Kim, and Kyungwoo Song
+	  Hoyoon Byun, <em>Minhoi Park</em>, Seolah Kim, Eunbi Kim, and Kyungwoo Song
 	  IJCAI 2024 Workshop (Trustworthy Interactive Decision-Making with Foundation Models)
 		
 	  <h2><strong>Language Model-guided Student Performance Prediction with Multimodal Auxiliary Information</strong></h2>
