--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -23,11 +23,15 @@
 	  <h2><strong>Dirichlet Stochastic Weights Averaging for Graph Neural Networks</strong></h2>
 	  <em>Minhoi Park</em>, Rakwoo Chang, and Kyungwoo Song
 	  Applied Intelligence 2024.(SCIE, JCR 2023 IF=3.4)
-
+	</li>	
+	      
+	<li class="entry">
           <h2><strong>Exploring the Potential of Foundation Models as Reliable AI Contact Centers</strong></h2>
 	  Hoyoon Byun, <em>Minhoi Park</em>, Seolah Kim, Eunbi Kim, and Kyungwoo Song
 	  IJCAI 2024 Workshop (Trustworthy Interactive Decision-Making with Foundation Models)
-		
+	</li>
+
+	<li class="entry">      
 	  <h2><strong>Language Model-guided Student Performance Prediction with Multimodal Auxiliary Information</strong></h2>
 	  Changdae Oh, <em>Minhoi Park</em>, Sungjun Lim, and Kyungwoo Song
 	  Expert Systems With Applications 2024. (SCIE, JCR 2023 IF=7.8)
