--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -21,19 +21,19 @@
 
 	<li class="entry">
 	  <h2><strong>Dirichlet Stochastic Weights Averaging for Graph Neural Networks</strong></h2>
-	  <b>Minhoi Park</b>, Rakwoo Chang, and Kyungwoo Song
+	  <b>Minhoi Park</b>, Rakwoo Chang, and Kyungwoo Song<br/>
 	  Applied Intelligence 2024.(SCIE, JCR 2023 IF=3.4)<br />
 	</li>	
 	      
 	<li class="entry">
           <h2><strong>Exploring the Potential of Foundation Models as Reliable AI Contact Centers</strong></h2>
-	  Hoyoon Byun, <b>Minhoi Park</b>, Seolah Kim, Eunbi Kim, and Kyungwoo Song
+	  Hoyoon Byun, <b>Minhoi Park</b>, Seolah Kim, Eunbi Kim, and Kyungwoo Song<br/>
 	  IJCAI 2024 Workshop (Trustworthy Interactive Decision-Making with Foundation Models)<br />
 	</li>
 
 	<li class="entry">      
 	  <h2><strong>Language Model-guided Student Performance Prediction with Multimodal Auxiliary Information</strong></h2>
-	  Changdae Oh, <b>Minhoi Park</b>, Sungjun Lim, and Kyungwoo Song
+	  Changdae Oh, <b>Minhoi Park</b>, Sungjun Lim, and Kyungwoo Song<br/>
 	  Expert Systems With Applications 2024. (SCIE, JCR 2023 IF=7.8)<br />
 	 </li>
 
