--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -39,14 +39,13 @@
 
       </ul>
 
-     
-    </div>	 
-     
+<!--       <h1>2023</h1> -->
+      <!-- Include any 2023 publications or under review papers here if needed -->
     </div>
   </div>
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
-       <p><strong>&copy; Machine Learning and Artificial Intelligence Lab @ Yonsei University</strong></p>
+      <p><strong>&copy; Machine Learning and Artificial Intelligence Lab @ Yonsei University</strong></p>
     </div>
   </div>
 </div>
