--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -10,15 +10,14 @@
     <div class="col-lg-12 text-center">
       <p><a href="https://scholar.google.com/citations?user=lPIo6ucAAAAJ"><i class="fa fa-graduation-cap fa-3x"></i></a></p>
       <p><a href="https://scholar.google.com/citations?user=lPIo6ucAAAAJ">Google Scholar</i></a></p>
-</div>
-</div>
+    </div>
+  </div>
 	
  <div class="row">
-      <h1>2024</h1>
-      <ul style="list-style-type: none">
+    <div class="col-lg-8 col-lg-offset-2">
+      <h1>2024</h1>      
       <h2>Peer Reviewed</h2>
       <ul style="list-style-type: none">
-
 	<li class="entry">
 	  <h2><strong>Dirichlet Stochastic Weights Averaging for Graph Neural Networks</strong></h2>
 	  <b>Minhoi Park</b>, Rakwoo Chang, and Kyungwoo Song<br/>
@@ -36,13 +35,10 @@
 	  Changdae Oh, <b>Minhoi Park</b>, Sungjun Lim, and Kyungwoo Song<br/>
 	  Expert Systems With Applications 2024. (SCIE, JCR 2023 IF=7.8)<br />
 	 </li>
-
       </ul>
-
-<!--       <h1>2023</h1> -->
-      <!-- Include any 2023 publications or under review papers here if needed -->
-    </div>
+   </div>
   </div>
+	
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 text-center m-t-lg m-b-lg">
       <p><strong>&copy; Machine Learning and Artificial Intelligence Lab @ Yonsei University</strong></p>
