--- a/_includes/sections/publications.html
+++ b/_includes/sections/publications.html
@@ -8,8 +8,8 @@
 
   <div class="row">
     <div class="col-lg-12 text-center">
-      <p><a href="https://scholar.google.com/citations?user=lPIo6ucAAAAJ"><i class="fa fa-graduation-cap fa-3x"></i></a></p>
-      <p><a href="https://scholar.google.com/citations?user=lPIo6ucAAAAJ">Google Scholar</i></a></p>
+      <p><a href="https://scholar.google.com/citations?user=K05fCo4AAAAJ"><i class="fa fa-graduation-cap fa-3x"></i></a></p>
+      <p><a href="https://scholar.google.com/citations?user=K05fCo4AAAAJ&hl=ko">Google Scholar</i></a></p>
     </div>
   </div>
 	
